modif title, description,keywords

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design Lyonnaise, illustrations, web design,stratégie">
+    <meta name="description" content="comment augmenter le trafic de votre site internet, ameliorer le web design de votre site, optimiser le SEO, meilleures statégies: nous sommes là pour vous accompagner">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index,follow"
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -20,7 +20,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title></title>
+    <title>Agence de WEB DESIGN à Lyon</title>
 
     
 <!-- Analytics -->
