modif nav footer

--- a/index.html
+++ b/index.html
@@ -253,38 +253,38 @@
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li><a href="https://www.sixt.fr/">voiture.com</a></li>
+								<li><a href="https://www.dominos.fr/">pizza.com</a></li>
+								<li><a href="https://www.toiture-co.fr/?xtor=SEC-1">matoiture.com</a></li>
+								<li><a href="https://www.orpi.com/">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
+							<li><a href="https://galadrim.fr/?gclid=Cj0KCQjw0umSBhDrARIsAH7FCofYL0rYH1FYhMKXRLBkKdm8XCHlVKd-cRs0phkzJ7WHLQVaJcGOCfcaAm9WEALw_wcB">annuaireagence.com</a></li>
+							<li><a href="https://gloria-project.eu/meilleurs-annuaires-seo/">annuaireseo.com</a></li>
+							<li><a href="https://www.sortlist.fr/web-marketing/france-fr?utm_cid=11490875712&utm_adgid=112586468136&utm_targetid=kwd-299450940900&utm_k=agence%20seo&utm_mt=b&utm_adid=501259516520&utm_device=c&utm_lpm=9056141&utm_source=google&utm_medium=cpc&utm_term=agence%20seo&utm_campaign=&hsa_acc=5270989324&hsa_cam=11490875712&hsa_grp=112586468136&hsa_ad=501259516520&hsa_src=g&hsa_tgt=kwd-299450940900&hsa_kw=agence%20seo&hsa_mt=b&hsa_net=adwords&hsa_ver=3&gclid=Cj0KCQjw0umSBhDrARIsAH7FCoc7cKQf0q_FWSWdA-e5EpeAjeFmR2RzA7mAHYT48F25TY2BVEtNpK0aAp5-EALw_wcB">annuairemarketing.com</a></li>
+							<li><a href="https://www.instagram.com/seosingapore2020/?hl=fr">123seo.com</a></li>
+							<li><a href="https://app.site123.com/manager/affiliate/abLandingOutsource.php?subject=&a=1&c_h=SITE123+Official+Website&utm_source=google&utm_medium=cpc&utm_campaign=11835782580&gclid=Cj0KCQjw0umSBhDrARIsAH7FCoejPdMy2LnxN_WknPyQRXdGRaPIi2H9nlhn1lB_7mKdf9N1YxSZ98kaAqS6EALw_wcB&l=en&landingSystem=1">123site.com</a></li>
+							<li><a href="https://app.site123.com/manager/affiliate/abLandingOutsource.php?subject=&a=1&c_h=SITE123+Official+Website&utm_source=google&utm_medium=cpc&utm_campaign=11835782580&gclid=Cj0KCQjw0umSBhDrARIsAH7FCoejPdMy2LnxN_WknPyQRXdGRaPIi2H9nlhn1lB_7mKdf9N1YxSZ98kaAqS6EALw_wcB&l=en&landingSystem=1">annuairewordpress.com</a></li>
+							<li><a href="https://www.webmarketing-conseil.fr/agences-paris/">listeagence.com</a></li>
+							<li><a href="https://junto.fr/blog/agence-web-paris/">meilleuresagencesparis.com</a></li>
+							<li><a href="https://www.uplix.fr/?gclid=Cj0KCQjw0umSBhDrARIsAH7FCodhQGNIyplZ3HvQOueYXUUMyQGMMsBDxbnTCkHlagh0Hq5bGStfeQIaAjzxEALw_wcB">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 2
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							<li><a href="https://www.semrush.com/lp/seo-challenges/fr/?kw=engine%20search%20optimization&cmp=FR_SRCH_SEO_Tools_FR&label=seo_tool&Network=g&Device=c&utm_content=451531608865&kwid=kwd-103532025&cmpid=10504037028&agpid=107905749830&BU=Core&extid=&adpos=&gclid=Cj0KCQjw0umSBhDrARIsAH7FCof2e2MM62sI9RnTLPx1M3gwY916tXa-7uKuzIIS3ftZn_5m2as4GmQaAglsEALw_wcB">betterseo.com</a></li>
+							<li><a href="https://www.orixa-media.com/expertise-seo/?utm_source=google&utm_medium=orixa-site&utm_campaign=SEO&utm_content=Agence-SEO&gclid=Cj0KCQjw0umSBhDrARIsAH7FCofiI9rtCyXmkOCFIV4RMaIE386DIkXdarz4XPZSUQVrSSC_4caruJUaAkTLEALw_wcB">ameliorerseo.com</a></li>
+							<li><a href="https://www.semjuice.com/p-campagnes-netlinking?gclid=Cj0KCQjw0umSBhDrARIsAH7FCofRxeYufqolDuv6_g9FQWM_3sOc7fzTKYBN0-NbSeUzvz_EdfvXsDwaApL7EALw_wcB">seojuicelien.com</a></li>
+							<li><a href="https://www.netlinking.fr/?gclid=Cj0KCQjw0umSBhDrARIsAH7FCodr-ahl-J0FER1-7Bt10EagWjFRYBMasUpl7BkFrXszsvF7J5NKjwUaAvf2EALw_wcB">meilleursliens.com</a></li>
+							<li><a href="https://www.meilleursliens.be/internet.php">liensagogo.com</a></li>
+							<li><a href="https://www.netlinking.fr/?gclid=Cj0KCQjw0umSBhDrARIsAH7FCodr-ahl-J0FER1-7Bt10EagWjFRYBMasUpl7BkFrXszsvF7J5NKjwUaAvf2EALw_wcB">backlink.com</a></li>
+							<li><a href="https://www.boosterlink.fr/link-juice">linkjuiceannuaire.com</a></li>
+							<li><a href="https://ads.google.com/intl/fr_fr/getstarted/?subid=fr-fr-ha-aw-bk-c-bau!o3~Cj0KCQjw0umSBhDrARIsAH7FCof7OOWAx6NhwG-nuKDL-oxNVCMKPTNgh542gA0JNUXx8ga5hDSTlGkaAr8pEALw_wcB~122337029672~kwd-521278434164~12972306681~554542860858&utm_source=aw&utm_medium=ha&utm_campaign=fr-fr-ha-aw-bk-c-bau!o3~Cj0KCQjw0umSBhDrARIsAH7FCof7OOWAx6NhwG-nuKDL-oxNVCMKPTNgh542gA0JNUXx8ga5hDSTlGkaAr8pEALw_wcB~122337029672~kwd-521278434164~12972306681~554542860858&gclid=Cj0KCQjw0umSBhDrARIsAH7FCof7OOWAx6NhwG-nuKDL-oxNVCMKPTNgh542gA0JNUXx8ga5hDSTlGkaAr8pEALw_wcB&gclsrc=aw.ds">remontersurgoogle.com</a></li>
+							<li><a href="https://jedonnemonavis.com/avis-client-sur-le-referencement-seo/">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
