--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design Lyonnaise, illustrations, web design,stratégie">
     <meta name="description" content="comment augmenter le trafic de votre site internet, ameliorer le web design de votre site, optimiser le SEO, meilleures statégies: nous sommes là pour vous accompagner">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta name="robots" content="index,follow"
+	<meta name="robots" content="index,follow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
